[tool.poetry]
name = "async_hw"
version = "0.1.0"
description = ""
authors = ["Alexey Zharinov <87263895+alzex3@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
more-itertools = "^8.12.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.32"}
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
